style: added a marginTop to hero.jade & hero.scss to have correct spacing between navbar

--- a/public/sass/partials/hero.scss
+++ b/public/sass/partials/hero.scss
@@ -5,4 +5,7 @@
   .navbar{
     background-color: white;
   }
+  .marginTop{
+    margin-top: 70px;
+  }
 }
